# MultiAtlas

./: CMakeLists.txt  IGR3D_MABMIS_Direct_Invoke.cxx  IGR3D_MABMIS_Direct_Invoke.xml  IGR3D_MABMIS_Testing.cxx  IGR3D_MABMIS_Testing.xml  IGR3D_MABMIS_Testing_Invoke.cxx  IGR3D_MABMIS_Testing_Invoke.xml  IGR3D_MABMIS_Training.cxx  IGR3D_MABMIS_Training.xml  README.md  Testing.cxx  Testing.h  Training.cxx  Training.h  commonMABMIS.cxx  commonMABMIS.h  itkMABMISAtlasXMLFile.cxx  itkMABMISAtlasXMLFile.h  itkMABMISBasicOperationFilter.h  itkMABMISBasicOperationFilter.hxx  itkMABMISBasicOperationFilter.txx  itkMABMISDeformationFieldFilter.h  itkMABMISDeformationFieldFilter.hxx  itkMABMISDeformationFieldFilter.txx  itkMABMISImageOperationFilter.h  itkMABMISImageOperationFilter.hxx  itkMABMISImageOperationFilter.txx  itkMABMISImageRegistrationFilter.h  itkMABMISImageRegistrationFilter.hxx  itkMABMISImageRegistrationFilter.txx  itkMABMISSimulateData.h  itkMABMISSimulateData.hxx  itkMABMISSimulateData.txx  itkMABMISTreeOperation.h  itkMABMISTreeOperation.hxx  itkMABMISTreeOperation.txx
Data/Baseline/: UA_cbq_000_seg.img  UB_cbq_000_seg.hdr  UB_cbq_000_seg.img  VA_cbq_000_seg.img  VB_cbq_000_seg.img
Data/Input/AtlasTree/: TrainedAtlas-win.xml  TrainedAtlas.xml
Data/Input/AtlasTree/TrainedAtlas/: 000_to_003_cbq_reg.img  000_to_003_deform_000.mha  000_to_003_deform_000_sub.mha  001_to_003_cbq_reg.img  001_to_003_deform_000.mha  001_to_003_deform_000_sub.mha  002_to_003_cbq_reg.img  002_to_003_deform_000.mha  002_to_003_deform_000_sub.mha  AB_cbq_000.img  AD_cbq_000.img  AD_seg_000.hdr  AD_seg_000.img  simulated_cbq_000.img  simulated_cbq_002.img  simulated_cbq_003.img  simulated_cbq_005.img  simulated_cbq_006.img  simulated_cbq_007.hdr  simulated_cbq_007.img  simulated_deform_000.mha  simulated_deform_001.mha  simulated_deform_002.mha  simulated_deform_003.mha  simulated_deform_004.mha  simulated_deform_005.mha  simulated_deform_006.mha  simulated_deform_007.mha
Data/Input/TestData/: .gitignore  TestData.xml  UA_cbq_000.img  UB_cbq_000.img  VA_cbq_000.img  VB_cbq_000.img
Data/Input/TrainingData/: AA_cbq_000.img  AA_seg_000.img  AB_seg_000.img  AC_cbq_000.img  AC_seg_000.img  TrainingData.xml
Testing/: CMakeLists.txt  IGR3D_MABMIS_TrainingTest.cxx
